css/style.css
/* ... */
.app-intro .app-intro-top .section-content {
  background-image: none;
}

.app-intro .app-intro-bottom {
  display: grid;
  grid-template-columns: 40% 60%;
  width: 100%;
  height: 50%;
}

.app-intro .app-intro-bottom .phone-media img {
  float: right;
}

.app-intro .app-intro-bottom .app-intro-content {
  margin: auto 0px;
  padding-left: 90px;
}

.app-intro .app-intro-bottom .app-intro-content .app-intro-block {
  width: 550px;
  padding: 0px 12px;
}

.app-intro-content .app-intro-block .common-subtitle {
  color: #997c5c;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: 36px; /* 150% */
  letter-spacing: -0.12px;
}

.app-intro-content .app-intro-block .common-paragraph {
  color: #997c5c;
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: 36px; /* 150% */
  letter-spacing: -0.12px;
}

.app-section {
  display: flex;
  padding: 12px 0px;
  justify-content: center;
  align-items: flex-start;
  gap: 12px;
  align-self: stretch;
}

.app-section-top {
  border-radius: 40px;
  background: url(/public/app-intro-background.png) no-repeat center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1 0 0;
  height: 688px;
  width: 100%;
}

.app-section-top .app-section-block {
  width: 100%;
  height: 471px;
  margin: auto 0;
  background: #ae8d68;
  border-radius: 40px;
  display: grid;
  grid-template-columns: 1fr 0.7fr;
}

.phone-media {
  margin: -6rem;
}

.app-section .phone-media {
  width: 100%;
  margin: -6rem;
  background: url(/public/phone-preview1.png) no-repeat left;
  background-size: contain;
  margin-left: 10px;
}

.app-section-block .phone-media {
  position: relative;
}

.app-section-block .phone-media img {
  position: absolute;
  top: -100px;
}

.app-section-block .app-section-content {
  margin: auto 0;
}

.app-section-block .app-section-content .content-block {
  display: flex;
  width: 540px;
  padding: 0px 12px;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  float: right;
  margin-right: 90px;
}

.app-section-content .common-title {
  color: #fff;
  letter-spacing: -0.72px;
}

.app-section-content .common-subtitle {
  color: #fff;
  letter-spacing: -0.12px;
}

.app-section-content .common-paragraph {
  color: #fff;
  font-size: 24px;
  line-height: 36px; /* 150% */
  letter-spacing: -0.12px;
}

.app-section-footer {
  display: flex;
  padding: 12px 0px;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
  align-self: stretch;
}

.app-section-footer .app-section-block {
  display: flex;
  padding: 40px 80px;
  flex-direction: column;
  align-items: flex-start;
  gap: 4px;
  align-self: stretch;
}

.app-section-footer .app-section-block .app-section-row {
  display: flex;
  padding: 16px 0px;
  align-items: center;
  gap: 40px;
  align-self: stretch;
}

.app-section .app-section-footer {
  display: flex;
  padding: 40px 80px;
  flex-direction: column;
  align-items: flex-start;
  gap: 4px;
  align-self: stretch;
  border-radius: 40px;
  background: #0c1c2d;
  width: 100%;
}

.app-section-footer .footer-title {
  display: flex;
  padding: 16px 0px;
  align-items: center;
  gap: 40px;
  align-self: stretch;
  height: 28px;
}

.app-section-footer .footer-paragraph1 {
  display: flex;
  align-items: center;
  gap: 20px;
  align-self: stretch;
  height: 28px;
}

.app-section-footer .footer-end {
  display: flex;
  padding: 16px 0px;
  align-items: flex-start;
  gap: 10px;
  align-self: stretch;
  height: 28px;
  color: #83909e;
  font-size: 18px;
  line-height: 28px; /* 155.556% */
}

.footer-paragraph1 .paragraph1 {
  display: flex;
  align-items: flex-start;
  gap: 4px;
}

.footer-paragraph1 .paragraph1 .left {
  color: #83909e;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px; /* 155.556% */
}

.footer-paragraph1 .paragraph1 .right {
  color: #f3f4f6;
  font-size: 18px;
  line-height: 28px; /* 155.556% */
}

.footer-paragraph1 .paragraph1 .right {
  color: #f3f4f6;
  font-size: 18px;
  line-height: 28px; /* 155.556% */
}

.separate {
  width: 1px;
  height: 16px;
  background: #83909e;
}

.footer-title p {
  color: #ae8d68;
  font-size: 18px;
  font-weight: 500;
  line-height: 28px;
}

.phone-preview {
  background: url(/public/phone-preview.png) no-repeat right;
  background-size: contain;
  height: 89%;
  margin-right: 50px;
}

@media only screen and (max-width: 1920) {
  .navigation-image {
    width: 50%;
  }
}

@media only screen and (max-width: 820px) {
  .CTA-wrapper {
    width: 98%;
  }
}
/* ... */

